@@ -293,17 +293,6 @@ class Example implements Comparable<Example> {
         if (procFiles.size() > 0) {
             List<String> pOpts = new ArrayList<>(Arrays.asList("-d", classesDir.getPath()));
 
-            // hack to automatically add exports; a better solution would be to grep the
-            // source for import statements or a magic comment
-            for (File pf: procFiles) {
-                if (pf.getName().equals("CreateBadClassFile.java")) {
-                    pOpts.add("--enable-preview");
-                    pOpts.add("--source");
-                    pOpts.add(String.valueOf(Runtime.version().feature()));
-                    pOpts.add("--add-exports=java.base/jdk.internal.classfile.impl=ALL-UNNAMED");
-                }
-            }
-
             new Jsr199Compiler(verbose).run(null, null, false, pOpts, procFiles);
             opts.add("-classpath"); // avoid using -processorpath for now
             opts.add(classesDir.getPath());
